# deception

./: .rsyncignore  CLAUDE.md  README.md  check_datasets.py  pyproject.toml  setup_llama.sh  test_datasets.py  test_socialmaze.py
analysis_results/: analysis_results.json
analysis_results_400/: analysis_results.json
analysis_results_500/: analysis_results.json
results/200/: analysis_results.json
results/300/: analysis_results.json
results/400/: analysis_results.json
results/800/: analysis_results.json
scripts/: analyze_model.py  download_datasets.py  download_hf_datasets.py  evaluate_and_report.py  plot_probes_across_checkpoints.py  plot_steering_sweep.py  plot_training_curves.py  sync_from_remote.sh  sync_to_remote.sh  train.py  train_llama.py
src/deception_interpretability/: __init__.py
src/deception_interpretability/data/: dataset_loader.py  hf_dataset_loaders.py  real_dataset_loaders.py
src/deception_interpretability/experiments/: ablation.py  steering.py  transfer.py
src/deception_interpretability/interpretability/: probes.py  sae.py
src/deception_interpretability/models/: deception_model.py  llama_deception_model.py
src/deception_interpretability/utils/: training_utils.py
v2/checkpoint-800/: trainer_state.json
writeup/: main.tex  references.bib
