[project]
name = "deception-interpretability"
version = "0.1.0"
description = "Mechanistic study of deception in LLMs trained on social deduction games"
readme = "README.md"
authors = [
    { name = "Timothy Obiso", email = "9258849+timothyobiso@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "wandb>=0.15.0",
    "einops>=0.7.0",
    "transformer-lens>=1.9.0",
    "nnsight>=0.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pyyaml>=6.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "gdown>=4.7.0",
    "requests>=2.31.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "scipy>=1.10.0",
]

[project.scripts]
deception-interpretability = "deception_interpretability:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
